Add introduction to theory and methods

--- a/Sections/0_Declaration.tex
+++ b/Sections/0_Declaration.tex
@@ -3,7 +3,13 @@ I have acknowledged all sources of information that have been used in the thesis
 Any contribution by individuals or sources other than my own has been cited and acknowledged.
 I understand that any act of plagiarism or academic dishonesty is a violation of the academic integrity policy of the University Paris-Saclay, and I am aware of the potential consequences.
 
+\vspace{1cm}
+
+David Simonne
+
+\vspace{1cm}
+
 \begin{figure}[!htb]
-    \centering
+    \raggedleft
     \includegraphics[width=0.495\textwidth]{/home/david/Documents/PhD/Figures/signature.png}
 \end{figure}
