--- a/Sections/2_Theory_Models/SixS.tex
+++ b/Sections/2_Theory_Models/SixS.tex
@@ -38,6 +38,7 @@ SixS (Surfaces Interfaces X-ray Scattering) is a wide-energy range beamline dedi
     \caption{
 		Schematic view of SixS, the monochromator is situated in the optical hutch, the focusing mirrors, the attenuators and the MED end-station are in the first experimental hutch, additional mirrors and the UHV end-station are in the second experimental hutch.
 		Only the MED end-station was used in the frame of this thesis.
+        Taken from Chatelier \parencite*{Chatelier2020}.
     }
     \label{fig:SixSBeamline}
 \end{figure}
