--- a/main.tex
+++ b/main.tex
@@ -218,12 +218,12 @@
     \input{Sections/00_Title_Saclay}
 
 % Optional Chapters
-    \chapter*{Dedication}
-    \input{Sections/0_Dedication}
-    \chapter*{Declaration}
-    \input{Sections/0_Declaration}
-    \chapter*{Acknowledgements}
-    \input{Sections/0_Acknowledgements}
+    % \chapter*{Dedication}
+    % \input{Sections/0_Dedication}
+    % \chapter*{Declaration}
+    % \input{Sections/0_Declaration}
+    % \chapter*{Acknowledgements}
+    % \input{Sections/0_Acknowledgements}
 
 \frontmatter
 {\hypersetup{linkcolor=black}
@@ -240,15 +240,16 @@
      
 % Theory
     \chapter{Theory and methods}
+    \input{Sections/2_Theory_Models/Introduction}
     \input{Sections/2_Theory_Models/Catalysis}
     \input{Sections/2_Theory_Models/X-ray_interaction_matter}
     \input{Sections/2_Theory_Models/SXRD}
     \input{Sections/2_Theory_Models/BCDI}
     \input{Sections/2_Theory_Models/SixS}
-    % \input{Sections/2_Theory_Models/CrystalStructures}
     \input{Sections/2_Theory_Models/ComputerPrograms}
+
 % Results BCDI
-    \addtocontents{toc}{\protect\newpage}
+    % \addtocontents{toc}{\protect\newpage}
     \chapter{Structural evolution of Pt nanoparticles during the oxidation of ammonia}
     \input{Sections/3_Results_Nanoparticles/Introduction}
     \input{Sections/3_Results_Nanoparticles/SXRDNanoparticles}
